3주차 과제 구현